GET itemの動線を作成
